added info about me, profile pic, and changed styles of main menu

--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -96,7 +96,8 @@
         "again": "Отново?"
     },
     "about": {
-        "title": "За Мен"
+        "title": "За Мен",
+        "intro": "Името ми е Николай. Роден съм на земята. Обичам да кодя."
     },
     "contacts": {
         "title": "Контакти"
