--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -28,23 +28,48 @@
             "questions": [
                 {
                     "question": "На колко години сте?",
-                    "answers": [ "0 - 16", "17 - 25", "26 - 50", "50 - Безкрайност" ]
+                    "answers": [
+                        "0 - 16",
+                        "17 - 25",
+                        "26 - 50",
+                        "50 - Безкрайност"
+                    ]
                 },
                 {
                     "question": "Защо яснотата?",
-                    "answers": [ "Улеснява нещата", "Яснотата си е яснота", "Защо не", "Нещо друго ..."]
+                    "answers": [
+                        "Улеснява нещата",
+                        "Яснотата си е яснота",
+                        "Защо не",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "От къде сте?",
-                    "answers": [ "Планетата Земя", "Друга вселена", "Вие не знаете", "Нещо друго ..."]
+                    "answers": [
+                        "Планетата Земя",
+                        "Друга вселена",
+                        "Вие не знаете",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "Защо нашата Земя?",
-                    "answers": [ "Най-доброто място за живеене", "Трябва да уча", "Да правя по-добри избори", "Нещо друго ..."]
+                    "answers": [
+                        "Най-доброто място за живеене",
+                        "Трябва да уча",
+                        "Да правя по-добри избори",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "Как мога да Ви помогна?",
-                    "answers": [ "Не можете", "Мога да се справя сам", "Има по-добри решения", "Мислите ли, че това си струва?" ]
+                    "answers": [
+                        "Не можете",
+                        "Мога да се справя сам",
+                        "Има по-добри решения",
+                        "Мислите ли, че това си струва?"
+                    ]
                 }
             ]
         },
@@ -52,19 +77,39 @@
             "questions": [
                 {
                     "question": "Какъв е мащаба на сложността?",
-                    "answers": [ "Няма такова нещо", "Имахте предвид \"big O\" нотацията?", "Виж комплексен анализ", "Нещо друго ..."]
+                    "answers": [
+                        "Няма такова нещо",
+                        "Имахте предвид \"big O\" нотацията?",
+                        "Виж комплексен анализ",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "Има ли разлика между съставно и сложно?",
-                    "answers":  [ "Няма разлика", "Съставното е подредено, сложното не е", "Съставно - система | Сложно - жена", "Виж комплексен анализ" ]
+                    "answers": [
+                        "Няма разлика",
+                        "Съставното е подредено, сложното не е",
+                        "Съставно - система | Сложно - жена",
+                        "Виж комплексен анализ"
+                    ]
                 },
                 {
                     "question": "Защо не яснотата?",
-                    "answers":  [ "Всичко е сложно", "Няма такова нещо", "Всичко е съставно", "Нещо друго ..." ]
+                    "answers": [
+                        "Всичко е сложно",
+                        "Няма такова нещо",
+                        "Всичко е съставно",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "Наред ли си?",
-                    "answers":  [ "Да, наред съм", "Не, не съм", "Защо?", "Нещо друго ..." ]
+                    "answers": [
+                        "Да, наред съм",
+                        "Не, не съм",
+                        "Защо?",
+                        "Нещо друго ..."
+                    ]
                 }
             ]
         },
@@ -72,15 +117,30 @@
             "questions": [
                 {
                     "question": "Може ли да ми дадете пример?",
-                    "answers": [ "Зависи от света", "Зависи от мен", "Няма значение", "Нещо друго ..." ]
+                    "answers": [
+                        "Зависи от света",
+                        "Зависи от мен",
+                        "Няма значение",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "Защо зависимостта?",
-                    "answers": [ "По този начин системата е по-интересна", "Няма зависимост", "Какво?", "Нещо друго ..."]
+                    "answers": [
+                        "По този начин системата е по-интересна",
+                        "Няма зависимост",
+                        "Какво?",
+                        "Нещо друго ..."
+                    ]
                 },
                 {
                     "question": "Колебаете ли се за нещо?",
-                    "answers": [ "Аз съм стабилен", "Няма такова нещо", "Аз съм уверен", "Може би" ]
+                    "answers": [
+                        "Аз съм стабилен",
+                        "Няма такова нещо",
+                        "Аз съм уверен",
+                        "Може би"
+                    ]
                 }
             ]
         },
@@ -89,7 +149,13 @@
         }
     },
     "times": {
-        "list": [ "Първи път", "Втори път", "Трети път", "Мисля, че е достатъчно", "Наред ли си? Пети път" ]
+        "list": [
+            "Първи път",
+            "Втори път",
+            "Трети път",
+            "Мисля, че е достатъчно",
+            "Наред ли си? Пети път"
+        ]
     },
     "stats": {
         "yourAnswers": "Вашите отговори",
@@ -97,10 +163,22 @@
     },
     "about": {
         "title": "За Мен",
-        "intro": "Името ми е Николай. Роден съм на земята. Обичам да кодя."
+        "intro": "Името ми е Николай. Роден съм на земята. Обичам да кодя.",
+        "techStack": "Технологичен стек",
+        "tech": {
+            "used": "Ползване в момента",
+            "js": "Javascript",
+            "html_css": "HTML5 & CSS3",
+            "react": "React",
+            "learning": "Изучавани в момента",
+            "gsap": "GSAP",
+            "reactSpring": "React-Spring",
+            "node": "Node.js"
+        }
     },
     "contacts": {
-        "title": "Контакти"
+        "title": "Контакти",
+        "send": "Изпрати"
     },
     "navigation": {
         "back": "Назад",
