--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -29,23 +29,48 @@
             "questions": [
                 {
                     "question": "How old are you?",
-                    "answers": [ "0 - 16", "17 - 25", "26 - 50", "50 - infinity" ]
+                    "answers": [
+                        "0 - 16",
+                        "17 - 25",
+                        "26 - 50",
+                        "50 - infinity"
+                    ]
                 },
                 {
                     "question": "Why simplicity?",
-                    "answers": [ "Makes it easier", "Simplicity is simplicity", "Why not", "Something else ..."]
+                    "answers": [
+                        "Makes it easier",
+                        "Simplicity is simplicity",
+                        "Why not",
+                        "Something else ..."
+                    ]
                 },
                 {
                     "question": "Where are you from?",
-                    "answers": [ "Planet Earth", "Another universe", "You don't know", "Something else ..."]
+                    "answers": [
+                        "Planet Earth",
+                        "Another universe",
+                        "You don't know",
+                        "Something else ..."
+                    ]
                 },
                 {
                     "question": "Why our Earth?",
-                    "answers": [ "The best place to live", "I have to learn", "To make better decisions", "something else ..."]
+                    "answers": [
+                        "The best place to live",
+                        "I have to learn",
+                        "To make better decisions",
+                        "something else ..."
+                    ]
                 },
                 {
                     "question": "How can I help you?",
-                    "answers": [ "You can't", "I can make it on my own", "there are better solutions", "do you think, is that worth it?" ]
+                    "answers": [
+                        "You can't",
+                        "I can make it on my own",
+                        "there are better solutions",
+                        "do you think, is that worth it?"
+                    ]
                 }
             ]
         },
@@ -53,19 +78,39 @@
             "questions": [
                 {
                     "question": "What is the scale of the complexity?",
-                    "answers": [ "There is no such thing", "Did you mean big O notation?", "See complexity analysis", "Something else ..."]
+                    "answers": [
+                        "There is no such thing",
+                        "Did you mean big O notation?",
+                        "See complexity analysis",
+                        "Something else ..."
+                    ]
                 },
                 {
                     "question": "Is there a difference between complex and complicated?",
-                    "answers":  [ "There is no difference", "Complex is ordered, complicated is not", "complex - system | complicated - woman", " See complexity analysis" ]
+                    "answers": [
+                        "There is no difference",
+                        "Complex is ordered, complicated is not",
+                        "complex - system | complicated - woman",
+                        " See complexity analysis"
+                    ]
                 },
                 {
                     "question": "Why not simplicity?",
-                    "answers":  [ "Everything is complex", "There is no such thing", "Everything is complicated", "Something else ..." ]
+                    "answers": [
+                        "Everything is complex",
+                        "There is no such thing",
+                        "Everything is complicated",
+                        "Something else ..."
+                    ]
                 },
                 {
                     "question": "Are you okay?",
-                    "answers":  [ "Yes, I am", "No, I am not", "Why?", "Something else ..." ]
+                    "answers": [
+                        "Yes, I am",
+                        "No, I am not",
+                        "Why?",
+                        "Something else ..."
+                    ]
                 }
             ]
         },
@@ -73,25 +118,45 @@
             "questions": [
                 {
                     "question": "Could you give me an example?",
-                    "answers": [ "It depends on the world", "It depends on me", "It doesn't matter", "Something else ..." ]
+                    "answers": [
+                        "It depends on the world",
+                        "It depends on me",
+                        "It doesn't matter",
+                        "Something else ..."
+                    ]
                 },
                 {
                     "question": "Why dependency?",
-                    "answers": [ "The system that way is more interesting", "There is no dependancy", "WTF?", "Something not else ..."]
+                    "answers": [
+                        "The system that way is more interesting",
+                        "There is no dependancy",
+                        "WTF?",
+                        "Something not else ..."
+                    ]
                 },
                 {
                     "question": "Do you hesitate for something?",
-                    "answers": [ "I am firm", "There is no such thing", "I am confident", "May be" ]
+                    "answers": [
+                        "I am firm",
+                        "There is no such thing",
+                        "I am confident",
+                        "May be"
+                    ]
                 }
             ]
         },
         "messages": {
             "success": "You answered all the questions. Congratulations! You win a gum with a few coins!"
         }
-
     },
     "times": {
-        "list": [ "First Time", "Second Time", "Third Time", "I think this is enough", "Are you okay? Fifth time" ]
+        "list": [
+            "First Time",
+            "Second Time",
+            "Third Time",
+            "I think this is enough",
+            "Are you okay? Fifth time"
+        ]
     },
     "stats": {
         "yourAnswers": "Your answers",
@@ -99,10 +164,22 @@
     },
     "about": {
         "title": "About Me",
-        "intro": "My name is Nikolai. I was born on Earth. I love to code."
+        "intro": "My name is Nikolai. I was born on Earth. I love to code.",
+        "techStack": "Technology Stack",
+        "tech": {
+            "used": "Using now",
+            "js": "Javascript",
+            "html_css": "HTML5 & CSS3",
+            "react": "React",
+            "learning": "Learning now",
+            "gsap": "GSAP",
+            "reactSpring": "React-Spring",
+            "node": "Node.js"
+        }
     },
     "contacts": {
-        "title": "Contacts"
+        "title": "Contacts",
+        "send": "Send"
     },
     "navigation": {
         "back": "Back",
