added and styled contact form

--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -178,7 +178,17 @@
     },
     "contacts": {
         "title": "Контакти",
-        "send": "Изпрати"
+        "form": {
+            "buttons": {
+                "send": "Изпрати",
+                "reset": "Нулиране"
+            },
+            "placeholders": {
+                "name": "Вашето Име",
+                "mail": "Вашата е-поща",
+                "message": "Напишете вашето съобщение тук ..."
+            }
+        }
     },
     "navigation": {
         "back": "Назад",
