--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -198,6 +198,7 @@
     "menu": {
         "about": "За Мен",
         "intro": "Въведение",
-        "contacts": "Контакти"
+        "contacts": "Контакти",
+        "questions": "Въпроси"
     }
 }
