--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -163,7 +163,7 @@
     },
     "about": {
         "title": "За Мен",
-        "intro": "Името ми е Николай. Роден съм на земята. Обичам да кодя.",
+        "intro": "Името ми е Николай. Роден съм на земята. Обичам да пиша код.",
         "techStack": "Технологичен стек",
         "tech": {
             "used": "Ползване в момента",
