keyword changed in the react question

--- a/src/languages/Questions/en-technical.json
+++ b/src/languages/Questions/en-technical.json
@@ -13,7 +13,7 @@
             { "question": "What is HTML?", "answers": [ "Hyper Text Markup Language", "Scripting Language", "Strange acronym" ]},
             { "question": "What is CSS?", "answers": [ "Programming Language", "Cascading Style Sheet", "Cascading Step of the Sheep" ]},
             { "question": "What is Javascript?", "answers": [ "Decoding signal", "Programming Language", "Coffee machine" ]},
-            { "question": "What is React?", "answers": [ "Front-end Framework", "Reacting system for bonuses", "Reactive engine" ]}
+            { "question": "What is React?", "answers": [ "Front-end library", "Reacting system for bonuses", "Reactive engine" ]}
         ],
         "medium": [
             { "question": "", "answers": [ "", "", "" ]},
