--- a/src/languages/Questions/bg-technical.json
+++ b/src/languages/Questions/bg-technical.json
@@ -13,7 +13,7 @@
             { "question": "Какво е HTML?", "answers": [ "Hyper Text Markup Language", "Скриптов език", "Странна абревиатура" ]},
             { "question": "Какво е CSS?", "answers": [ "Език за програмиране", "Cascading Style Sheet", "Cascading Step of the Sheep" ]},
             { "question": "Какво е Javascript?", "answers": [ "Декодиращ сигнал", "Език за програмиране", "Кафе машина" ]},
-            { "question": "Какво е React?", "answers": [ "Front-end Framework", "Реагираща система за бонуси", "Реактивен двигател" ]}
+            { "question": "Какво е React?", "answers": [ "Front-end библиотека", "Реагираща система за бонуси", "Реактивен двигател" ]}
         ],
         "medium": [
             { "question": "", "answers": [ "", "", "" ]},
