--- a/src/languages/en-questions.json
+++ b/src/languages/en-questions.json
@@ -1,7 +1,7 @@
 {
     "questions": {
-        "category": {
-            "title": "Category",
+        "category": "Category",
+        "categories": {
             "technical": "Technical",
             "personal": "Personal",
             "work": "Work",
