--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -7,7 +7,7 @@
         "mainQuestionEnd": "important",
         "mainAnswersYes": "Yes",
         "mainAnswersNo": "No",
-        "mainAnswersItDepends": "It Depends"
+        "mainAnswersDepends": "Depends"
     },
     "answers": {
         "yes": {
@@ -18,8 +18,8 @@
             "title": "No",
             "description": "Complex and complicated is the opposite of the simplicity. They are also as important as simplicity, because understading each of them, we can deepen the understanding about the simplicity."
         },
-        "itDepends": {
-            "title": "It Depends",
+        "depends": {
+            "title": "Depends",
             "description": "Yes, there are different factors that make the simplicity to depend. One of the key factors is perceiving."
         },
         "learnMore": "Learn More"
