added translation and styling for answered questions success message and navigation text

--- a/src/languages/bg-questions.json
+++ b/src/languages/bg-questions.json
@@ -17,6 +17,13 @@
         "buttons": {
             "status": "статус",
             "start": "започни"
+        },
+        "success": {
+            "message": "Готово!"
+        },
+        "navigation": {
+            "back": "Обратно към категории въпроси",
+            "home": "Въведение"
         }
     }
 }
