added personal questions in bg/en

--- a/src/languages/Questions/bg-personal.json
+++ b/src/languages/Questions/bg-personal.json
@@ -9,10 +9,10 @@
     },
     "questions": {
         "easy": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Каква е вашата възраст?", "answers": [ "0-18", "19-25", "26-50", "Неопределена" ]},
+            { "question": "С какво се занимавате?", "answers": [ "Програмиране", "Наркотици", "Оръжия", "Нещо друго" ]},
+            { "question": "Имате ли свободно време?", "answers": [ "Не те интересува", "Не съществува такова нещо", "Да, имам в изобилие" ]},
+            { "question": "Как обичате да изкарвате вашата почивка?", "answers": [ "Никак", "Спане с разбиране", "Четене с разбиране" ]}
         ],
         "medium": [
             { "question": "", "answers": [ "", "", "" ]},
