change: keyword changed in subintro text

--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -166,7 +166,7 @@
         "intro": "Името ми е Николай. Роден съм на земята. Обичам да пиша код.",
         "subintro": {
             "title": "Допълнително инфо",
-            "description": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ). Имам интереси и влечения свързани с изработката на анимации през уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
+            "description": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ). Имам интереси и влечения свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
         },
         "techStack": "Технологичен стек",
         "tech": {
