changed contact form using mailto and added social links to contact component

--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -182,6 +182,7 @@
         }
     },
     "contacts": {
+        "label": "Изпращане на съобщение",
         "title": "Контакти",
         "form": {
             "buttons": {
