--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -183,6 +183,7 @@
         }
     },
     "contacts": {
+        "label": "Send a message",
         "title": "Contacts",
         "form": {
             "buttons": {
