mobile responsiveness improved

--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -182,19 +182,8 @@
         }
     },
     "contacts": {
-        "label": "Изпращане на съобщение",
-        "title": "Контакти",
-        "form": {
-            "buttons": {
-                "send": "Изпрати",
-                "reset": "Нулиране"
-            },
-            "placeholders": {
-                "name": "Вашето Име",
-                "mail": "Вашата е-поща",
-                "message": "Напишете вашето съобщение тук ..."
-            }
-        }
+        "label": "Изпрати съобщение",
+        "title": "Контакти"
     },
     "navigation": {
         "back": "Назад",
@@ -203,7 +192,7 @@
     },
     "menu": {
         "about": "За Мен",
-        "intro": "Въведение",
+        "intro": "Начало",
         "contacts": "Контакти",
         "questions": "Въпроси"
     }
