changed bg label for navigation and removed unused entries

--- a/src/languages/bg-questions.json
+++ b/src/languages/bg-questions.json
@@ -23,7 +23,7 @@
         },
         "navigation": {
             "back": "Обратно към категории въпроси",
-            "home": "Въведение"
+            "home": "Начало"
         }
     }
 }
