added questions navigation (next and prev buttons)

--- a/src/languages/bg-questions.json
+++ b/src/languages/bg-questions.json
@@ -22,8 +22,10 @@
             "message": "Готово!"
         },
         "navigation": {
-            "back": "Обратно към категории въпроси",
-            "home": "Начало"
+            "backCategory": "Обратно към категории въпроси",
+            "home": "Начало",
+            "prevQuestion": "Предишен",
+            "nextQuestion": "Следващ"
         }
     }
 }
