added questions for each categories

--- a/src/languages/Questions/bg-entertainment.json
+++ b/src/languages/Questions/bg-entertainment.json
@@ -9,22 +9,22 @@
     },
     "questions": {
         "easy": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Кое е забавно?", "answers": [ "Всичко", "Моля, по-сериозно", "Добре ли си?" ]},
+            { "question": "Къде е кафето?", "answers": [ "Защо?", "Кокос", "Аз карам, благодаря" ]},
+            { "question": "Как се свири на пиано?", "answers": [ "Прави лицеви упори", "Яж банани", "Движи си пръстите" ]},
+            { "question": "Къде е луната?", "answers": [ "Какво е луната?", "Защо?", "Вляво, шесто авеню" ]}
         ],
         "medium": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Кое не е забавно?", "answers": [ "Ти", "Моят чичо", "жени (понякога)" ]},
+            { "question": "Къде е леглото?", "answers": [ "Защо?", "Кой си ти?", "Аз вече спя" ]},
+            { "question": "Защо има коли?", "answers": [ "Можеш да живееш по-добре", "Няма причина", "Кокос" ]},
+            { "question": "Искаш ли бонбони?", "answers": [ "Не, те са опасни", "Да, това е важно", "Защо, аз имам много" ]}
         ],
         "hard": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Да", "answers": [ "Ходите ли до тоалетна?", "Ядете ли?", "Използвате ли компютър?" ]},
+            { "question": "Не", "answers": [ "Използвате ли кондоми?", "Питате ли въпроси?", "Това не е забавно" ]},
+            { "question": "Къде си?", "answers": [ "Тук съм", "Планетата Земя", "Някъде отдалечено" ]},
+            { "question": "Как се играе Kingdom Rush?", "answers": [ "Инсталирай я", "Не знам", "Ти не знаеш" ]}
         ]
     }
 }
