--- a/src/languages/Questions/bg-personal.json
+++ b/src/languages/Questions/bg-personal.json
@@ -15,16 +15,16 @@
             { "question": "Как обичате да изкарвате вашата почивка?", "answers": [ "Никак", "Спане с разбиране", "Четене с разбиране" ]}
         ],
         "medium": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Как правите бизнес?", "answers": [ "Аз работя", "Комуникация", "Четене/Слушане" ]},
+            { "question": "Имате ли деца?", "answers": [ "Да, много", "Не, не още", "Правя си едно" ]},
+            { "question": "Имате ли кола?", "answers": [ "Не, имам две", "използвам телепорт", "Не, имам самолет" ]},
+            { "question": "Какво искате?", "answers": [ "Книги", "Зайци", "Моркови" ]}
         ],
         "hard": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Имате ли съпруг/съпруга?", "answers": [ "Да", "Не", "Незнам" ]},
+            { "question": "Вашите деца слушат ли ви?", "answers": [ "Да, разбира се", "Не", "Можеби" ]},
+            { "question": "Къде е тоалетната?", "answers": [ "У дома", "Облаците", "5-то Авеню" ]},
+            { "question": "Колко пари правите?", "answers": [ "Много", "Достатъчно", "Работа в прогрес" ]}
         ]
     }
 }
