--- a/src/languages/Questions/bg-work.json
+++ b/src/languages/Questions/bg-work.json
@@ -9,22 +9,22 @@
     },
     "questions": {
         "easy": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Какъв брой работни часове предпочитате на ден?", "answers": [ "8", "4", "16" ]},
+            { "question": "Къде предпочитате да работите?", "answers": [ "Някъде отдалечено", "В офис", "Сред колеги" ]},
+            { "question": "Какво за Вас е работното място?", "answers": [ "Втори живот", "Седалка", "Подходящи условия" ]},
+            { "question": "Броя часове свързан ли е с качеството на работата?", "answers": [ "Не", "Зависи", "Да" ]}
         ],
         "medium": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Важна ли е почивката?", "answers": [ "От съществено значение е", "Не", "Зависи" ]},
+            { "question": "Желание за работа?", "answers": [ "Да, важно е", "Дисциплина", "Мотивация/Причинност" ]},
+            { "question": "Качество на свършена работа?", "answers": [ "голямо количество практика", "Фокусиране", "Комуникация" ]},
+            { "question": "Какво е добрият работен процес?", "answers": [ "Организираност/подходи", "Методичност", "Практика и опит" ]}
         ],
         "hard": [
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]},
-            { "question": "", "answers": [ "", "", "" ]}
+            { "question": "Постигане на висок стандарт?", "answers": [ "Работа, с високо качество", "Опит", "Дисциплина" ]},
+            { "question": "Отпуск?", "answers": [ "Да, разбира се", "Не, не е възможно", "Няма такова нещо" ]},
+            { "question": "Последователност в работен процес?", "answers": [ "Цел, практика, резултат", "Цел, съсредоточаване, резултат", "Цел, организираност, резултат" ]},
+            { "question": "Резултати от работа?", "answers": [ "Високи, заради качество", "Положителни, заради опит", "Нещо друго..." ]}
         ]
     }
 }
