changes in intro content and removed logoQuestion image

--- a/src/languages/bg.json
+++ b/src/languages/bg.json
@@ -163,10 +163,10 @@
     },
     "about": {
         "title": "За Мен",
-        "intro": "Името ми е Николай. Роден съм на земята. Обичам да пиша код.",
+        "intro": "Името ми е Николай. Обичам да пиша код и да разрешавам задачи.",
         "subintro": {
             "title": "Допълнително инфо",
-            "description": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ). Имам интереси и влечения свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
+            "description": "Често пия кафе ( старая се да не е в промишлени количества ). Спортувам - ходя на лостове . Гледам децата си ( шегичка ). Имам интереси свързани с изработката на анимации в уеб приложения. В областта на анимациите има много за учене ( казах ли много ), което ме вдъхновява и кара да се развивам всеки ден."
         },
         "techStack": "Технологичен стек",
         "tech": {
