added title to QuestionSelector component and some styling

--- a/src/languages/bg-questions.json
+++ b/src/languages/bg-questions.json
@@ -1,6 +1,7 @@
 {
     "questions": {
         "category": "Категория",
+        "title": "Въпроси с отговори",
         "categories": {
             "technical": "Технически",
             "personal": "Лични",
