--- a/src/languages/en-questions.json
+++ b/src/languages/en-questions.json
@@ -1,6 +1,7 @@
 {
     "questions": {
         "category": "Category",
+        "title": "Questions with answers",
         "categories": {
             "technical": "Technical",
             "personal": "Personal",
